Fixing header name on Safari

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -35,6 +35,7 @@
 .header .logo-name {
   padding: 0 10px;
   font-weight: bold;
+  font-variant-ligatures: none;
   font-family: "Agustina Regular";
 }
 
